# coercible-subtypes

./: CHANGELOG.md  README.md  coercible-subtypes.cabal
coercible-subtypes/: CHANGELOG.md  LICENSE  README_OLD.md  coercible-subtypes.cabal
coercible-subtypes-profunctor/: CHANGELOG.md  README.md  coercible-subtypes-profunctor.cabal
coercible-subtypes-profunctor/src/Data/Type/Coercion/Sub/: Profunctor.hs
coercible-subtypes/src/Data/Type/Coercion/: Related.hs  Sub.hs
coercible-subtypes/src/Data/Type/Coercion/Related/: Internal.hs
coercible-subtypes/src/Data/Type/Coercion/Sub/: Internal.hs
coercible-subtypes/src/Newtype/: Intersection.hs  LatticeProperties.hs  Union.hs
src/Data/Type/Coercion/: Related.hs  Sub.hs
src/Data/Type/Coercion/Related/: Internal.hs
src/Data/Type/Coercion/Sub/: Internal.hs
src/Newtype/: Intersection.hs  Union.hs
