cabal-version:       2.2
name:                coercible-subtypes-profunctor
version:             1
synopsis:    Combine profunctors with coercible-subtypes
description: Provides the means of mapping @Sub a b@ type over @Profunctor p@.
             The former comes from "coercible-subtypes" package and the latter is from "profunctors".

homepage:            https://github.com/viercc/coercible-subtypes
bug-reports:         https://github.com/viercc/coercible-subtypes/issues
license:             BSD-3-Clause
license-file:        LICENSE
author:              Koji Miyazato
maintainer:          viercc@gmail.com
copyright:           (c) 2020-2021 Koji Miyazato
category:            Data
build-type:          Simple
extra-source-files:  README.md
extra-doc-files:     CHANGELOG.md

source-repository HEAD
  type:     git
  location: https://github.com/viercc/coercible-subtypes
  branch:   master

library
  exposed-modules:     Data.Type.Coercion.Sub.Profunctor
  build-depends:       base >=4.12 && <4.22,
                       coercible-subtypes >= 0.3.0.0 && < 1.1,
                       profunctors >= 5 && < 6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wcompat
